; ModuleID = '/home/carl/AnghaBench/ish/fs/extr_fake.c_fakefs_rmdir.c'
source_filename = "/home/carl/AnghaBench/ish/fs/extr_fake.c_fakefs_rmdir.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32 (%struct.mount*, i8*)* }
%struct.mount = type { i32 }

@realfs = common dso_local global %struct.TYPE_2__ zeroinitializer, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.mount*, i8*)* @fakefs_rmdir to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @fakefs_rmdir(%struct.mount* %0, i8* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.mount*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i32, align 4
  store %struct.mount* %0, %struct.mount** %4, align 8
  store i8* %1, i8** %5, align 8
  %7 = load %struct.mount*, %struct.mount** %4, align 8
  %8 = call i32 @db_begin(%struct.mount* %7)
  %9 = load i32 (%struct.mount*, i8*)*, i32 (%struct.mount*, i8*)** getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @realfs, i32 0, i32 0), align 8
  %10 = load %struct.mount*, %struct.mount** %4, align 8
  %11 = load i8*, i8** %5, align 8
  %12 = call i32 %9(%struct.mount* %10, i8* %11)
  store i32 %12, i32* %6, align 4
  %13 = load i32, i32* %6, align 4
  %14 = icmp slt i32 %13, 0
  br i1 %14, label %15, label %19

15:                                               ; preds = %2
  %16 = load %struct.mount*, %struct.mount** %4, align 8
  %17 = call i32 @db_rollback(%struct.mount* %16)
  %18 = load i32, i32* %6, align 4
  store i32 %18, i32* %3, align 4
  br label %25

19:                                               ; preds = %2
  %20 = load %struct.mount*, %struct.mount** %4, align 8
  %21 = load i8*, i8** %5, align 8
  %22 = call i32 @path_unlink(%struct.mount* %20, i8* %21)
  %23 = load %struct.mount*, %struct.mount** %4, align 8
  %24 = call i32 @db_commit(%struct.mount* %23)
  store i32 0, i32* %3, align 4
  br label %25

25:                                               ; preds = %19, %15
  %26 = load i32, i32* %3, align 4
  ret i32 %26
}

declare dso_local i32 @db_begin(%struct.mount*) #1

declare dso_local i32 @db_rollback(%struct.mount*) #1

declare dso_local i32 @path_unlink(%struct.mount*, i8*) #1

declare dso_local i32 @db_commit(%struct.mount*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
